syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";

service DiscountProtoService{
	rpc GetDiscount(GetDiscountRequest) returns (CouponModel);

	rpc CreateDiscount(CreateDiscountRequest) returns (CouponModel);
	rpc UpdateDiscount(UpdateDiscountRequest) returns (CouponModel);
	rpc RemoveDiscount(RemoveDiscountRequest) returns (RemoveDiscountResponse);
}

message CouponModel{
	int32 id = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}

message GetDiscountRequest{
	string productName = 1;
}

message CreateDiscountRequest{
	CouponModel coupon = 1;
}

message UpdateDiscountRequest{
	CouponModel coupon = 1;
}

message RemoveDiscountRequest{
	string productName = 1;
}

message RemoveDiscountResponse{
	bool success = 1;
}